FIX background color not showing over phones hud, css gradient placed over app class

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,12 @@
+.App {
+  background: linear-gradient(
+    90deg,
+    hsl(var(--background-clr)),
+    hsl(200 100% 11%),
+    hsl(200 100% 9%)
+  );
+}
+
 .loader {
   display: flex;
   justify-content: center;
@@ -60,9 +69,9 @@
   background-color: hsl(var(--black) / 0.4);
   background: linear-gradient(
     50deg,
-    hsl(var(--black) / 0.35),
-    hsl(var(--white) / 0.07),
-    hsl(var(--black) / 0.25)
+    hsl(var(--black) / 0.3),
+    hsl(var(--white) / 0.075),
+    hsl(var(--black) / 0.2)
   );
   color: hsl(var(--white));
   font-size: var(--fs-400);
